--- a/client/index.html
+++ b/client/index.html
@@ -12,32 +12,56 @@
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
     crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+
+  <style>
+    body {
+      background-color: powderblue;
+    }
+
+    .main-container {
+      padding-top: 200px;
+      width: 600px;
+      display: block;
+      margin: auto;
+    }
+  </style>
 
 </head>
 
 <body>
   <main role="main">
     <div class="container">
-      <div class="row">
-        <div class="col-sm" id="title">
-
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm" id="body">
-
-        </div>
-      </div>
-      <div class="row">
-          <div class="col-sm" id="images">
-              <img src="..." alt="..." class="img-thumbnail">
+      <div class="row main-container">
+        <div class="panel panel-success">
+          <div class="panel-heading">
+            <h3 class="panel-title" id="title">Panel title</h3>
+          </div>
+          <div class="panel-body" id="body">
+            Panel 
           </div>
         </div>
+      </div>
+      <div class="row">
+        <!--<div class="col-sm" id="images">
+          <img src="..." alt="..." class="img-thumbnail">
+        </div>-->
+      </div>
     </div>
 
   </main>
 
   <script src="script.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script>
+    window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+  </script>
+  <script src="https://getbootstrap.com/docs/3.3/dist/js/bootstrap.min.js"></script>
+  <script src="https://getbootstrap.com/docs/3.3/assets/js/docs.min.js"></script>
+  <script src="https://getbootstrap.com/docs/3.3/assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
